--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <div>
 
       <!-- <header data-include="nav.html"></header> -->
-      <header hx-get="nav.html" hx-trigger="load" hx-swap="outerHTML"></header>
+      <header hx-get="Templates/nav.html" hx-trigger="load" hx-swap="outerHTML"></header>
     <main>
         <h1>Welcome to GVPCDPGC</h1>
         <p>This is the home page.</p>
