--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
     </section>
     <div>
 
-      <header data-include="./templates/nav.html"></header>
-      <!-- <header hx-get="./Templates/nav.html" hx-trigger="load" hx-swap="outerHTML"></header> -->
+      <!-- <header data-include="./templates/nav.html"></header> -->
+      <header hx-get="nav.html" hx-trigger="load" hx-swap="outerHTML"></header>
     <main>
         <h1>Welcome to GVPCDPGC</h1>
         <p>This is the home page.</p>
