--- a/adm-coordinators.html
+++ b/adm-coordinators.html
@@ -214,7 +214,7 @@
 </style> 
 <body>
     <!-- call for header from nav.html -->
-    <header hx-get="../templates/nav.html" hx-trigger="load" hx-swap="outerHTML"></header>
+    <header hx-get="./templates/nav.html" hx-trigger="load" hx-swap="outerHTML"></header>
     <main>
         <div class="adm-hod-e&t" > 
             <div class="heading" ><h1>COORDINATORS</h1></div>
@@ -367,7 +367,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </script>
     
-    <footer hx-get="../templates/footer.html" hx-trigger="load" hx-swap="outerHTML"></footer>
+    <footer hx-get="./templates/footer.html" hx-trigger="load" hx-swap="outerHTML"></footer>
 
     
 </body>
