updated footer rendering

--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
           Dolores aliquid soluta reprehenderit nobis, libero quasi natus nulla dolore nemo quam aperiam ratione enim temporibus debitis, quaerat quas voluptatem quia magni pariatur molestiae excepturi! Dicta qui ipsam nesciunt totam!
           Ullam atque molestiae dignissimos quisquam laborum deserunt soluta. Nihil repudiandae nisi sequi excepturi earum non, quis porro ipsam alias quos officiis molestiae vitae similique, eligendi expedita amet praesentium. Itaque, ut.
       </main>
-      <footer hx-get="footer.html" hx-trigger="load" hx-swap="outerHTML"></footer>
+      <div id="footer-placeholder">
+      </div>
       <script src="script.js"></script>
       
     </div>
