--- a/Adminstration/adm-directors.html
+++ b/Adminstration/adm-directors.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-    <script src="includeHTML.js" defer></script>
+    <script src="../templates/includeHTML.js" defer></script>
     <script src="https://unpkg.com/htmx.org@1.8.5"></script> 
     <style>
     *{
@@ -208,9 +208,7 @@
 </head>
 
 <body>
-    <!-- Header from nav.html -->
-    <header hx-get="../templates/nav.html" hx-trigger="load" hx-swap="outerHTML"></header>
-    <!-- <header data-include="nav.html"> </header> -->
+    <div id="nav-placeholder"></div>
     <main>
         <h1 class="heading">DIRECTORS</h1>
         <div>
@@ -379,8 +377,7 @@
     });
 });
     </script>
-    
+    <div id="footer-placeholder"></div>
 </body>
-<footer hx-get="../templates/footer.html" hx-trigger="load" hx-swap="outerHTML"></footer>
     <script src="script.js"></script>
 </html>
