--- a/faculty/iipcmembers.html
+++ b/faculty/iipcmembers.html
@@ -224,7 +224,7 @@
             </div>
         </main>
         <script type="module">
-            import cardsData from './faculty.js';
+            import cardsData from '../faculty.js';
     
             document.addEventListener('DOMContentLoaded', () => {
                 
