--- a/Adminstration/adm-hod-ug.html
+++ b/Adminstration/adm-hod-ug.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-    <script src="includeHTML.js" defer></script>
+    <script src="../templates/includeHTML.js" defer></script>
     <script src="https://unpkg.com/htmx.org@1.8.5"></script>
     <style>
     *{
@@ -209,9 +209,8 @@
 
 <body>
     <!-- Header from nav.html -->
-    <header hx-get="../templates/nav.html" hx-trigger="load" hx-swap="outerHTML"></header>
-   
-    <!-- <header data-include="nav.html"> </header> -->
+    <!-- <header hx-get="../templates/nav.html" hx-trigger="load" hx-swap="outerHTML"></header> -->
+    <div id="nav-placeholder"></div>
     <main>
         <h1 class="heading">HEAD OF THE DEPARTMENT-UG</h1>
         <div>
@@ -441,8 +440,8 @@
     });
 });
     </script>
-    <footer hx-get="../templates/footer.html" hx-trigger="load" hx-swap="outerHTML"></footer>
-    <script src="script.js"></script>
+     <div id="footer-placeholder"></div>
+     <script src="script.js"></script>
 </body>
 
 </html>
