--- a/others/clubs.html
+++ b/others/clubs.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -30,7 +31,7 @@
         .box {
             display: flex;
             flex-wrap: wrap;
-            justify-content: center;
+            /* justify-content: center; */
             gap: 20px;
         }
         .box a {
@@ -83,11 +84,12 @@
 <body>
     <header id="nav-placeholder"></header>
     <div class="container">
-        <h1>TRAINING & PLACEMENTS</h1>
+        <h1>CLUBS</h1>
         <div class="box">
-            <a href="../Academics/engeenering.html"><button>ENGINEERING & TECHNOLOGY</button></a>
-            <a href="../Academics/undergraduate.html"><button>UNDERGRADUATE</button></a>
-            <a href="../Academics/pg.html"><button>POST GRADUATE</button></a>
+            <a href="##"><button>LITERACY CLUB</button></a>
+            <a href="##"><button>SPORTS CLUB</button></a>
+            <a href="##"><button>ACM CHAPTER</button></a>
+            <a href="##"><button>YUVA CLUB</button></a>
         </div>
     </div>
     <footer id="footer-placeholder">Footer Content Here</footer>
