chore: Update page title in index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+    <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/htmx.org@1.6.1"></script>
-    <title>Templete</title>
+    <title>GVPCDPGC</title>
     <script src="./templates/includeHTML.js" defer></script>
      <script src="./scprit.js"></script>
     <link rel="stylesheet" href="./templates/preloder.css">
@@ -215,16 +215,7 @@
         justify-content: space-between;
         transform: translateY(-50%);
       }
-        
-      /*.carousel-controls span {*/
-      /*  text-align: center;*/
-      /*  width: 45px;*/
-      /*  max-height: 45px;*/
-      /*  background: rgba(225,225,225,01.5);*/
-      /*font-size: 35px;*/
-      /*color: #22316c;*/
-      /*border: 2px solid  rgba(225,225,225,1.5);*/
-      /*}*/
+
       .page3 .carousel-controls button{
           padding-bottom:25px;
         }
@@ -542,7 +533,7 @@
 
 
       </script>
-           <script src="./notfication.js"></script>
+        <script src="./notfication.js"></script>
     </div>
   </body>
 </html>
