code updated naac.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>GVPCDPGC</title>
     <script src="./templates/includeHTML.js" defer></script>
      <script src="./scprit.js"></script>
-    <link rel="stylesheet" href="./templates/preloder.css">
+    <!-- <link rel="stylesheet" href="./templates/preloder.css"> -->
     <style>
       *{
         font-family: "inter",sans-serif;
@@ -345,7 +345,7 @@
             </div>
           </div>
       </main>
-      <footer id="footer-placeholder"></footer>
+ 
       <script>
         const heading = document.getElementById('dynamic-heading');
         const texts = ["Welcome to GVP", "Gayatri Vidya Parishad"]; // Array of texts
@@ -508,7 +508,9 @@
 
 
       </script>
+      <script src="./templates/preloader.js"></script>
         <script src="./notfication.js"></script>
-    </div>
+        <footer id="footer-placeholder" delay></footer>
+
   </body>
 </html>
