naac completed,all set

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       margin: 0 5px;
     }
     /* Mobile Styles */
-    @media (max-width: 768px) {
+    @media screen and (max-width: 768px) {
       .page3 .carousel-item {
         display: block;
         text-align: center;
@@ -308,7 +308,7 @@
               </div>
             </div>
           </div>
-          <div class="page4">
+          <div class="page4" style="justify-content: center;">
             <div><h3>OUR RECRUITERS</h3></div>
             <div class="carousel-container">
               <!-- slider 1 -->
@@ -344,6 +344,7 @@
               </div>
             </div>
           </div>
+
       </main>
  
       <script>
@@ -510,6 +511,7 @@
       </script>
       <script src="./templates/preloader.js"></script>
         <script src="./notfication.js"></script>
+        
         <footer id="footer-placeholder" delay></footer>
 
   </body>
