--- a/Academics/Departments.html
+++ b/Academics/Departments.html
@@ -11,6 +11,17 @@
             padding: 0;
             box-sizing: border-box;
         }
+        header {
+            background-image: url("/assects/home.png");
+            background-repeat: no-repeat;
+            background-position: center;
+            background-clip: content-box;
+            position: relative;
+        }
+        hr{
+            background-color: #22316c;
+            height: 10px;
+        }
         .main {
             height: 100vh;
             width: 100%;
@@ -52,7 +63,8 @@
     </style>
 </head>
 <body>
-    <div id="nav-placeholder"></div>
+    <header id="nav-placeholder"></header>
+    <hr>
     <div class="main">
         <div class="img1" style="background-image:url(../assects/engeneering.png)">
             <a href="./engeenering.html"><h1>ENGINEERING</h1></a>
@@ -65,6 +77,6 @@
         </div>
     </div>
     <script src="../templates/includeHTML.js" defer></script>
-    <div id="footer-placeholder"></div>
+    <footer id="footer-placeholder"></footer>
 </body>
 </html>
