--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         font-family: "inter",sans-serif;
       }
       .page1{
+        width: 100%;
         background-image: url("/assects/home.png");
         background-repeat: no-repeat;
         background-position: center;
