--- a/top/iqac.html
+++ b/top/iqac.html
@@ -11,16 +11,17 @@
             font-family: "Inter", sans-serif;
         }
         header {
+            width: 100%;
             background-image: url("/assects/home.png");
             background-repeat: no-repeat;
             background-position: center;
-            background-clip: content-box;
+            background-size: cover;
             position: relative;
         }
         .container {
             width: 100%;
             position: relative;
-            /* padding-bottom: 1%; Enough space for the button at the bottom */
+            padding-bottom: 1%; 
         }
         .container > .head {
             text-align: center;
@@ -212,7 +213,6 @@
 </head>
 <body>
     <header id="nav-placeholder"></header>
-   
     <div class="container">
         <div class="head">
             <h6>IQAC</h6>
@@ -227,14 +227,12 @@
     <div id="sub1" class="hidden"></div>
     <div id="sub2" class="hidden"></div>
     <div id="sub3" class="hidden"></div>
-    <div id="sub4" class="hidden"></div>
     <button id="scrollToTop" class="scroll-to-top">
         &#8593; <!-- Unicode character for up arrow -->
     </button>
     <footer id="footer-placeholder"></footer>
     <script type="module">
         import iqacData from '../data/topdata/iqac.js';
-        console.log(iqacData)
         function renderSection(iqacId, data) {
             const container = document.getElementById(iqacId);
             container.innerHTML = `
@@ -288,7 +286,6 @@
         document.getElementById('button1').addEventListener('click', () => toggleVisibility('button1', 'sub1'));
         document.getElementById('button2').addEventListener('click', () => toggleVisibility('button2', 'sub2'));
         document.getElementById('button3').addEventListener('click', () => toggleVisibility('button3', 'sub3'));
-        document.getElementById('button4').addEventListener('click', () => toggleVisibility('button4', 'sub4'));
 
         document.addEventListener('DOMContentLoaded', () => {
             toggleVisibility('button1', 'sub1');
