--- a/Adminstration/administration.html
+++ b/Adminstration/administration.html
@@ -44,7 +44,7 @@
             <span id="COORDINATORS"></span><br><br><br><br>
             <h1 class="heading" >COORDINATORS</h1>
             <div id="cod-container"></div>
-            <div class="view"><a href="##" id="view-all-cod"><button>view more</button></a></div>
+            <div class="view"><a href="##" id="view-all-cod"><button>View More</button></a></div>
         </div>
     </div>
    
