--- a/Adminstration/administration.html
+++ b/Adminstration/administration.html
@@ -49,7 +49,7 @@
     </div>
    
      <script type="module">
-        import cardsData from '../faculty.js';
+        import cardsData from '../data/faculty.js';
 
         document.addEventListener('DOMContentLoaded', () => {
             function createCard(data) {
