--- a/placements/about-placements.html
+++ b/placements/about-placements.html
@@ -384,7 +384,7 @@ main{
       </div>
     </main>
     <script type="module">
-      import cardsData from "../faculty.js";
+      import cardsData from "../data/faculty.js";
 
       document.addEventListener("DOMContentLoaded", () => {
         // Function to create a card element
