--- a/faculty/faculty.html
+++ b/faculty/faculty.html
@@ -62,7 +62,8 @@
             min-width: 160px;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
             z-index: 1;
-            border-radius: 5px;
+            border-radius: 10px;
+            padding:3px;
             opacity: 0;
             transition: opacity 0.3s ease;
         }
@@ -74,6 +75,7 @@
             text-decoration: none;
             display: block;
             width: 330px;
+            margin-bottom: 1px;
             transition: background-color 0.3s ease;
             cursor: pointer;
         }
