--- a/top/naac.html
+++ b/top/naac.html
@@ -235,7 +235,7 @@
     </button>
     <footer id="footer-placeholder"></footer>
     <script type="module">
-        import naacData from '../data/topdata.js';
+        import naacData from '../data/topdata/topdata.js';
 
         function renderSection(naacId, data) {
             const container = document.getElementById(naacId);
