--- a/placements/about-placements.html
+++ b/placements/about-placements.html
@@ -27,6 +27,7 @@ main{
 }
 
 .heading{
+  font-size: 2vw;
     color: rgba(34,49,109,1);
     text-align: center;
     margin: 1.5rem 0;
@@ -55,7 +56,7 @@ main{
 }
 
 .container p{
-    font-size: xx-large;
+    font-size: medium;
     margin-top: 1rem;
 }
 
@@ -109,7 +110,7 @@ main{
     align-content: center;
     align-items: center;
 }
-.fac_title h1 {
+.fac_title h6 {
     font-size: 30px;
     margin-bottom: 10px;
 }
@@ -164,7 +165,7 @@ main{
     margin: 13px;
     
 }
-.fac_card:hover  h1{
+.fac_card:hover  h6{
     margin-bottom: -3px;
     font-size: 25px;
 }
@@ -201,7 +202,7 @@ main{
         max-width: 546px;
         margin-bottom: 20px;
     }
-    .fac_title h1 {
+    .fac_title h6 {
         font-size: 20px;
     }
     .fac_title p {
@@ -232,7 +233,7 @@ main{
     .fac_title {
         padding: 10px;
     }
-    .fac_title h1 {
+    .fac_title h6 {
         font-size: 18px;
     }
     .fac_title p {
@@ -298,7 +299,7 @@ main{
     <div id="nav-placeholder"></div>
     <main>
       <div class="container">
-        <h1 class="heading">about-placements</h1>
+        <h6 class="heading">about-placements</h6>
         <div class="container">
           <div class="top-row row">
             <img
@@ -329,7 +330,7 @@ main{
             />
           </div>
         </div>
-        <h1 class="heading sub-head">Training and placement</h1>
+        <h6 class="heading sub-head">Training and placement</h6>
         <hr />
         <p>
           Training and Placement (T&P) cell is an integral part of all the
@@ -338,7 +339,7 @@ main{
           quantity of students who are placed from the various institutions of
           Gayatri Vidya Parishad.
         </p>
-        <h1 class="heading sub-head oa">our aim:</h1>
+        <h6 class="heading sub-head oa">our aim:</h6>
         <hr />
         <p>
           The aim of the T & P cell is to mould all the students of the
@@ -351,7 +352,7 @@ main{
           designed to give the society, better citizens as per our mission
           statement.
         </p>
-        <h1 class="heading sub-head oa">Our strengths:</h1>
+        <h6 class="heading sub-head oa">Our strengths:</h6>
         <hr />
         <p>
           Our students who have excelled themselves in the academics also
@@ -362,7 +363,7 @@ main{
           better companies to the campus and enhanced their trust and belief in
           our institutions.
         </p>
-        <h1 class="heading sub-head oa">our training:</h1>
+        <h6 class="heading sub-head oa">our training:</h6>
         <hr />
         <p>
           A thorough and complete awareness is given to the students on various
@@ -371,7 +372,7 @@ main{
           sessions are planned in such a way that their curriculum is not
           disturbed.
         </p>
-        <h1 class="heading">TRAINING & PLACEMENT OFFICER</h1>
+        <h6 class="heading">TRAINING & PLACEMENT OFFICER</h6>
       </div>
       <div class="crds">
         <div class="card-container" id="pto-container"></div>
@@ -424,7 +425,7 @@ main{
                             <p class="extension">Extension:${data.extension}</p>
                         </div>
                          <div class="fac_title">
-                        <h1 class="name">${data.name}</h1>
+                        <h6 class="name">${data.name}</h6>
                         ${Title}
                         <p class="designation">${data.designation}</p>
                         ${Email}
