--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         background-position: center;
         background-clip: content-box;
         position: relative;
+        background-size: cover;
 
       }
       .knowmr{
